[package]
name = "kinematic_platform"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12"
bevy_ecs_ldtk = "0.8"

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", branch = "feat/bevy-0.12" }
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
